pom hell